--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "typings": "build/index.d.ts",
   "scripts": {
+    "codegen": "graphql-codegen --config codegen.yml",
     "build": "rm -rf build && tsc",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src --fix"
   },
